...
    
    // Forecast data
    @State var currentHour = Calendar.current.component(.hour, from: Date())
    @State var currentDay = Calendar.current.component(.weekday, from: Date())
    @State var previsionsbh = [Int]()
    @State var previsionsbd = [Int]()
    let weekdays = [1: "Dimanche", 2: "Lundi", 3: "Mardi", 4: "Mercredi", 5: "Jeudi", 6: "Vendredi", 7: "Samedi"]
    
    // Background animation var
    @State private var animateGradient = true

    var body: some View {
        ZStack {
...
                }
                .listRowBackground(Color.blue.opacity(0.65))
                Section("📕 Informations supplémentaires") {
                    HStack {
                        VStack {
                            Spacer()
                            Text("Lever du soleil")
                            Spacer()
                            Image(systemName: "sun.max.fill")
                                .font(.system(size: 60))
                                .foregroundColor(Color.yellow)
                                .frame(height: 55)
                            Spacer()
...
