...
                HStack {
                    Button {
                        withAnimation {
                            region = MKCoordinateRegion(center: CLLocationCoordinate2D(latitude: CLLocationManager().location?.coordinate.latitude ?? 0.0, longitude: CLLocationManager().location?.coordinate.longitude ?? 0.0), span: MKCoordinateSpan(latitudeDelta: 10, longitudeDelta: 10))
                        }
                    } label: {
                        Text("Position actuelle")
                            .frame(width: 175, height: 45, alignment: .center)
                            .background(Color(UIColor.tertiarySystemBackground))
                            .cornerRadius(10)
                    }
                    .padding(.bottom, 30)
                    Button {
...
