...
                                GlobalVars.searchLatitude = Float(coordinate.latitude)
                                GlobalVars.searchLongitude = Float(coordinate.longitude)
                                searched = true
                            }
                        }
                    } label: {
                        Text("Valider")
                            .foregroundColor(Color.white)
                            .frame(width: 175, height: 45, alignment: .center)
                            .background(Color.blue.opacity(0.65))
                            .cornerRadius(10)
                    }
                    .padding(.bottom, 40)
...
